# UniLogger

./: CMakeLists.txt  LICENSE  README.md
Examples/: CMakeLists.txt
Examples/src/: testLogger.cpp  testLoggerFile.c
UniLogger/: CMakeLists.txt
UniLogger/include/: UniLogger.h
UniLogger/src/: UniLogger.c
cmake/: BuildOptions.cmake  Settings.cmake
docs/: BuildSteps.md  UserGuide.md
